# POCS

TD1/ml/: .gitignore  ex1f.cpp  ex1m.cpp  ex2.cpp
TD1/ml/rapport/: damien_thenot_rapport.tex
TD2/ml/: CMakeLists.txt  data.txt  m1.cpp  matrix.cpp  matrix.h  matrixv1.cpp  matrixv1.h  ml.cpp  test_algebra.cpp  test_performances.cpp  vector.cpp  vector.h
